--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <p> is the standard markup language for documents designed to be displayed in a web browser. 
             It can be assisted by technologies such as <b>Cascading Style Sheets (CSS)</b> and scripting languages such as <b>JavaScript. </b>  </p>
         
-        <h2></h2>
+        <h2>Useful tags</h2>
+
+
+        <a href="README.md">Go to README</a>
     </body>
 </html>
