--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     &lt;img src= "/image.jpg" alt= "image"&gt;
                 </p>
                 <p>Result:</p>
-                <img src="sunset.jpg" alt="sunset" width="50%">
+                <img src="../sunset.jpg" alt="sunset" width="50%">
             
             <h3>Animated image</h3>
                 <p>when adding an animated image in HTML you also use the &lt;img&gt; tag. The only difference is the extention file. They use .gif extention file for animated image</p>
@@ -105,7 +105,7 @@
                     &lt;img src= "/Robot.gif" alt= "Robot"&gt;
                 </p>
                 <p>Result:</p>
-                <img src="Robot.gif" alt="Robot">
+                <img src="../Robot.gif" alt="Robot">
             
             <p>a bit of code (example)</p>
 
