--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>Markdown to HTML</title>
+        <script type="text/javascript" >
+            var name  = window.prompt("Please enter your name");        
+            alert("Hello " + name);
+        </script>
     </head>
     <body>
         <h1>Hypertext Markup Language (HTML)</h1>
@@ -76,8 +80,10 @@
                         <li>Registration Form</li>
                     </ol>
             </ol>
-            <h3>two or three level of titles and subtitles</h3>
-                <p></p>
+            <h3>Titles and Subtitles</h3>
+                <p>Headers are used to emphasize any titles and subtitles of a page</p>
+                <h1>&lt;h1&gt; tag is use for the title of the page</h1>
+                <h2>&lt;h2&gt; tag is use for subtitles</h2>
             
             <h3>Links</h3>
                 <p>In creating links in HTML you use the &lt;a&gt; tag.</p>
@@ -107,8 +113,9 @@
                 <p>Result:</p>
                 <img src="../Robot.gif" alt="Robot">
             
-            <p>a bit of code (example)</p>
+            <h3>a bit of code</h3>
+            <p>You have seen it</p>
 
-        <a href="README.md">Go to README</a>
+        <a href="https://github.com/frances-joffany-navarro/markdown-warmup-html/blob/main/README.md">Go to README</a>
     </body>
 </html>
