--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     &lt;img src= "/image.jpg" alt= "image"&gt;
                 </p>
                 <p>Result:</p>
-                <img src="../images/sunset.jpg" alt="sunset" width="50%">
+                <img src="images/sunset.jpg" alt="sunset" width="50%">
             
             <h3>Animated image</h3>
                 <p>when adding an animated image in HTML you also use the &lt;img&gt; tag. The only difference is the extention file. They use .gif extention file for animated image</p>
@@ -115,7 +115,7 @@
                     &lt;img src= "/Robot.gif" alt= "Robot"&gt;
                 </p>
                 <p>Result:</p>
-                <img src="../images/Robot.gif" alt="Robot">
+                <img src="images/Robot.gif" alt="Robot">
             
             <h3>a bit of code</h3>
             <p>You have seen it</p>
