fixed css and html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="content">
-        <h2>Hypertext Markup Language (HTML)</h2>
+        <h1>Hypertext Markup Language (HTML)</h1>
         <p class="description"> is the standard markup language for documents designed to be displayed in a web browser.
             It can be assisted by technologies such as <b>Cascading Style Sheets (CSS)</b> and scripting languages such
             as
@@ -29,120 +29,109 @@
 
         <h2>HTML Tags</h2>
         <div>
-            <h3 class = "subtitle">Unordered list</h3>
-            <p class = "description">To create an unordered list use &lt;ul&gt; tag.</p>
-            <div class=sample>
-                <table>
-                    <tr>
-                        <td>HTML</td>
-                        <td>Result</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>
-                                &lt;ul&gt; <br>
-                                &lt;li&gt; Item 1 &lt;/li&gt; <br>
-                                &lt;li&gt; Item 2 &lt;/li&gt; <br>
-                                &lt;li&gt; Item 3 &lt;/li&gt; <br>
-                                &lt;/ul&gt;
-                            </p>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>Item 1</li>
-                                <li>Item 2</li>
-                                <li>Item 3</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
+            <h3 class="subtitle">Unordered list</h3>
+            <p class="description">To create an unordered list use &lt;ul&gt; tag.</p>
+            <div class="sample">
+                <div class="html">
+                    <p class>HTML</p>
+                    <p>
+                        &lt;ul&gt; <br>
+                        &lt;li&gt; Item 1 &lt;/li&gt; <br>
+                        &lt;li&gt; Item 2 &lt;/li&gt; <br>
+                        &lt;li&gt; Item 3 &lt;/li&gt; <br>
+                        &lt;/ul&gt;
+                    </p>
+                </div>
+                <div class="result">
+                    <p>Result</p>
+                    <p>
+                    <ul>
+                        <li>Item 1</li>
+                        <li>Item 2</li>
+                        <li>Item 3</li>
+                    </ul>
+                    </p>
+                </div>
             </div>
         </div>
 
         <div>
-            <h3 class = "subtitle">Ordered list</h3>
+            <h3 class="subtitle">Ordered list</h3>
             <p class="description">To create an ordered list use &lt;ol&gt; tag.</p>
 
-            <div class=sample>
-                <table>
-                    <tr>
-                        <td>HTML</td>
-                        <td>Result</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>
-                                &lt;ol&gt; <br>
-                                &lt;li&gt; Last Name &lt;/li&gt; <br>
-                                &lt;li&gt; First Name &lt;/li&gt; <br>
-                                &lt;li&gt; Age &lt;/li&gt; <br>
-                                &lt;/ol&gt;
-                            </p>
-                        </td>
-                        <td>
-                            <ol>
-                                <li>Last Name</li>
-                                <li>First Name</li>
-                                <li>Age</li>
-                            </ol>
-                        </td>
-                    </tr>
-                </table>
+            <div class="sample">
+                <div class="html">
+                    <p>HTML</p>
+                    <p>
+                        &lt;ol&gt; <br>
+                        &lt;li&gt; Last Name &lt;/li&gt; <br>
+                        &lt;li&gt; First Name &lt;/li&gt; <br>
+                        &lt;li&gt; Age &lt;/li&gt; <br>
+                        &lt;/ol&gt;
+                    </p>
+                </div>
+
+                <div class="result">
+                    <p>Result</p>
+                    <p>
+                    <ol>
+                        <li>Last Name</li>
+                        <li>First Name</li>
+                        <li>Age</li>
+                    </ol>
+                    </p>
+                </div>
             </div>
         </div>
 
         <div>
-            <h3 class = "subtitle">List within a list</h3>
-            <div class=sample>
-                <table>
-                    <tr>
-                        <td>HTML</td>
-                        <td>Result</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>
-                                &lt;ol&gt; <br>
-                                &lt;li&gt; Profile &lt;/li&gt; <br>
-                                &lt;ul&gt; <br>
-                                &lt;li&gt; Last Name &lt;/li&gt; <br>
-                                &lt;li&gt; First Name &lt;/li&gt; <br>
-                                &lt;li&gt; Age &lt;/li&gt; <br>
-                                &lt;/ul&gt;<br>
-                                &lt;li&gt; Document Needed &lt;/li&gt; <br>
-                                &lt;ol&gt; <br>
-                                &lt;li&gt; Identity Card &lt;/li&gt; <br>
-                                &lt;li&gt; Bank Card &lt;/li&gt; <br>
-                                &lt;li&gt; Registration Form &lt;/li&gt; <br>
-                                &lt;/ol&gt;<br>
-                                &lt;/ol&gt;<br>
-                            </p>
-                        </td>
-                        <td>
-                            <ol>
-                                <li>Profile</li>
-                                <ul>
-                                    <li>Last Name</li>
-                                    <li>First Name</li>
-                                    <li>Birthday</li>
-                                </ul>
-                                <li>Document Needed</li>
-                                <ol>
-                                    <li>Identity Card</li>
-                                    <li>Bank Card</li>
-                                    <li>Registration Form</li>
-                                </ol>
-                            </ol>
-                        </td>
-                    </tr>
-                </table>
+            <h3 class="subtitle">List within a list</h3>
+            <div class="sample">
+                <div class="html">
+                    <p>HTML</p>
+                    <p>
+                        &lt;ol&gt; <br>
+                        &lt;li&gt; Profile &lt;/li&gt; <br>
+                        &lt;ul&gt; <br>
+                        &lt;li&gt; Last Name &lt;/li&gt; <br>
+                        &lt;li&gt; First Name &lt;/li&gt; <br>
+                        &lt;li&gt; Age &lt;/li&gt; <br>
+                        &lt;/ul&gt;<br>
+                        &lt;li&gt; Document Needed &lt;/li&gt; <br>
+                        &lt;ol&gt; <br>
+                        &lt;li&gt; Identity Card &lt;/li&gt; <br>
+                        &lt;li&gt; Bank Card &lt;/li&gt; <br>
+                        &lt;li&gt; Registration Form &lt;/li&gt; <br>
+                        &lt;/ol&gt;<br>
+                        &lt;/ol&gt;<br>
+                    </p>
+                </div>
+                <div class="result">
+                    <p>Result</p>
+                    <p>
+                    <ol>
+                        <li>Profile</li>
+                        <ul>
+                            <li>Last Name</li>
+                            <li>First Name</li>
+                            <li>Birthday</li>
+                        </ul>
+                        <li>Document Needed</li>
+                        <ol>
+                            <li>Identity Card</li>
+                            <li>Bank Card</li>
+                            <li>Registration Form</li>
+                        </ol>
+                    </ol>
+                    </p>
+                </div>
             </div>
         </div>
 
         <div>
-            <h3 class = "subtitle">Titles and Subtitles</h3>
+            <h3 class="subtitle">Titles and Subtitles</h3>
             <p class="description">Headers are used to emphasize any titles and subtitles of a page</p>
-            <div class=sample>                
+            <div class="sample">
                 <h1>&lt;h1&gt; tag is use for the title of the page</h1>
                 <h2>&lt;h2&gt; tag is use for subtitles</h2>
             </div>
@@ -150,72 +139,75 @@
         </div>
 
         <div>
-            <h3 class = "subtitle">Links</h3>
+            <h3 class="subtitle">Links</h3>
             <p class="description">In creating links in HTML you use the &lt;a&gt; tag.</p>
-            <div class=sample>
-                <table>
-                    <tr>
-                        <td>HTML</td>
-                        <td>Result</td>
-
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>
-                                &lt;a href= "https://github.com/frances-joffany-navarro" &gt; My github account
-                                &lt;/a&gt;
-                                <br>
-                                &lt;a href= "https://linkedin.com/in/frances-navarro-05775a126" &gt; My Linkedin Bio
-                                &lt;/a&gt;
-                                <br>
-                                &lt;p&gt;Learn more about the organization &lt;a
-                                href="becode.org">Becode&lt;/a&gt;&lt;/p&gt;
-                            </p>
-                        </td>
-                        <td>
-                            <a href="https://github.com/frances-joffany-navarro">My github account</a><br>
-                            <a href="https://linkedin.com/in/frances-navarro-05775a126">My Linkedin Bio</a><br>
-                            <p>Learn more about the organization <a href="becode.org">Becode</a></p>
-                        </td>
-                    </tr>
-                </table>
+            <div class="sample">
+                <div class="html">
+                    <p>HTML</p>
+                    <p>
+                        &lt;a href= "https://github.com/frances-joffany-navarro" &gt; My github account
+                        &lt;/a&gt;
+                        <br>
+                        &lt;a href= "https://linkedin.com/in/frances-navarro-05775a126" &gt; My Linkedin Bio
+                        &lt;/a&gt;
+                        <br>
+                        &lt;p&gt;Learn more about the organization &lt;a
+                        href="becode.org">Becode&lt;/a&gt;&lt;/p&gt;
+                    </p>
+                </div>
+                <div class="result">
+                    <p>Result</p>
+                    <a href="https://github.com/frances-joffany-navarro">My github account</a><br>
+                    <a href="https://linkedin.com/in/frances-navarro-05775a126">My Linkedin Bio</a><br>
+                    <p>Learn more about the organization <a href="https://becode.org">Becode</a></p>
+                </div>
             </div>
         </div>
 
         <div>
-            <h3 class = "subtitle">Static image</h3>
+            <h3 class="subtitle">Static image</h3>
             <p class="description">In adding static image in HTML you use the &lt;img&gt; tag. They use images with .jpg
                 or .png extention file for static images</p>
-            <div class=sample>
-                <p>HTML &lt;img src= "/image.jpg" alt= "image"&gt;
-                </p>
-                <p>Result:</p>
-                <img src="images/sunset.jpg" alt="sunset" width="50%">
+            <div class="sample">
+                <div class="html">
+                    <p>HTML</p>
+                    <p>&lt;img src= "/image.jpg" alt= "image"&gt;
+                    </p>
+                </div>
+                <div class="result">
+                    <p>Result</p>
+                    <img src="images/sunset.jpg" alt="sunset">
+                </div>
             </div>
         </div>
 
         <div>
-            <h3 class = "subtitle">Animated image</h3>
+            <h3 class="subtitle">Animated image</h3>
             <p class=description>when adding an animated image in HTML you also use the &lt;img&gt; tag. The only
                 difference is the extention file. They use .gif extention file for animated image</p>
-            <div class=sample>
-                <p>HTML &lt;img src= "/Robot.gif" alt= "Robot"&gt;
-                </p>
-                <p>Result:</p>
-                <img src="images/Robot.gif" alt="Robot">
+            <div class="sample">
+                <div class="html">
+                    <p>HTML</p>
+                    <p>&lt;img src= "/Robot.gif" alt= "Robot"&gt;</p>
+                </div>
+
+
+                <div class="result">
+                    <p>Result</p>
+                    <img src="images/Robot.gif" alt="Robot">
+                </div>
             </div>
 
         </div>
 
         <div>
-            <h3 class = "subtitle">a bit of code</h3>
-            <p class="description">You have seen it</p>
+            <h3 class="subtitle">A bit of code</h3>
+            <p class="description">You have seen it. I used a simple javascipt.</p>
         </div>
     </div>
     <footer>
         <a href="https://frances-joffany-navarro.github.io/markdown-warmup-html/">Go back</a>
     </footer>
-
 </body>
 
 </html>
