--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
     </div>
     <footer>
-        <a href="https://frances-joffany-navarro.github.io/markdown-warmup-html/">Go back</a>
+        <a href="https://github.com/frances-joffany-navarro/markdown-warmup-html">Go back</a>
     </footer>
 </body>
 
